Shoring stuff up; adding dependency on common

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 allprojects {
-	group = 'com.nsxwing'
+	group = 'com.nsxwing.client'
 	version = '1.0-SNAPSHOT'
 
 	repositories {
+		mavenLocal()
 		mavenCentral()
 		jcenter()
 	}
