Changing approach to use Kryonet. Committing now while it works; need to clean up and test still.

--- a/nsx-wing-client-app/build.gradle
+++ b/nsx-wing-client-app/build.gradle
@@ -11,6 +11,7 @@ startScripts {
 
 dependencies {
     compile project(':nsx-wing-client-core')
+    compile project(':nsx-wing-client-networking')
 
     compile "com.nsxwing.common:nsx-wing-common-game:${project.nsxWingCommonVersion}"
 
