--- a/nsx-wing-client-networking/build.gradle
+++ b/nsx-wing-client-networking/build.gradle
@@ -4,6 +4,9 @@ dependencies {
 	compile project(':nsx-wing-client-core')
 
 	compile "com.nsxwing.common:nsx-wing-common-game:${project.nsxWingCommonVersion}"
+	compile "com.nsxwing.common:nsx-wing-common-networking:${project.nsxWingCommonVersion}"
+
+	compile "com.esotericsoftware:kryonet:${project.kryonetVersion}"
 
 	runtime(
 			[group: 'ch.qos.logback', name: 'logback-classic',  version: project.logbackVersion],
